Fixed nav spacing issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -310,6 +310,7 @@ select {
 /* Desktop Styles */
 @media (min-width: 768px) {
   body {
+      margin-top: 1.25rem;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -321,13 +322,6 @@ select {
       display: flex;
       flex-direction: column;
       gap: 3rem;
-  }
-
-  /* Navigation */
-  nav ul {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
   }
 
   /* Sections */
